--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="https://rhinoplay.co/casino/home">
     <title>Redireccionando...</title>
     <script>
         window.location.href = "https://oasispro.vip/";
     </script>
 </head>
 <body>
-    <p>Si no eres redirigido automáticamente, haz clic <a href="https://oasispro.vip/">aquí</a>.</p>
+    <p>Si no eres redirigido automáticamente, haz clic <a href="https://rhinoplay.co/casino/home">aquí</a>.</p>
 </body>
 </html>
